--- a/index.html
+++ b/index.html
@@ -6,36 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>The Freedom Project | An Irish Vanlife Story</title>
 </head>
 
 <body>
-<header>
-    <nav>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-nav">
+            <div class="container-fluid">
+                <a class="navbar-brand logo" href="index.html">&nbsp;</a>
+                <button class="toggle-nav d-lg-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggle-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link link" href="ourstory.html">Our Story</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link link" href="contact.html">Contact</a>
+                        </li>
 
-    </nav>
-</header>
+                    </ul>
+                    <ul class="nav-social">
+                        <li><i class="fab fa-instagram bold"></i></li>
+                        <li><i class="fab fa-tiktok"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-<!-- Hero Image -->
-<section>
+    <!-- Hero Image -->
+    <section>
 
-</section>
+    </section>
 
-<!-- Profile Image & Bio -->
-<section>
+    <!-- Profile Image & Bio -->
+    <section>
 
-</section>
+    </section>
 
-<!-- Featured & Recent Articles -->
-<section>
+    <!-- Featured & Recent Articles -->
+    <section>
 
-</section>
+    </section>
 
-<footer>
+    <footer>
 
-</footer>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 
 </body>
 
