--- a/index.html
+++ b/index.html
@@ -13,42 +13,54 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-nav">
+        <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
+        <nav class="navbar navbar-expand-md bg-nav">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="index.html">&nbsp;</a>
-                <button class="toggle-nav d-lg-none" type="button" data-bs-toggle="collapse"
+                <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="toggle-icon"><i class="fas fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                        <li class="nav-item">
-                            <a class="nav-link link" href="ourstory.html">Our Story</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link" href="contact.html">Contact</a>
-                        </li>
+                    <div class="navigation">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item">
+                                <a class="nav-link link" href="ourstory.html">Our Story</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="d-md-none d-lg-block">
+                        <ul class="nav-social">
+                            <li><i class="fab fa-instagram bold"></i></li>
+                            <li><i class="fab fa-tiktok"></i></li>
+                        </ul>
+                    </div>
 
-                    </ul>
-                    <ul class="nav-social">
-                        <li><i class="fab fa-instagram bold"></i></li>
-                        <li><i class="fab fa-tiktok"></i></li>
-                    </ul>
+
                 </div>
             </div>
         </nav>
     </header>
 
-    <!-- Hero Image -->
-    <section>
-
+    <!-- Hero Section -->
+    <section class="container-fluid g-0">
+        <div class="hero-image-home">
+            <div class="hero-text">
+                <h1>"Your <s>feet</s> van will take you where your heart is."</h1>
+                <span class="linebreak">&nbsp;</span>
+                <h3><em>Irish Proverb</em></h3>
+            </div>
+        </div>
     </section>
 
     <!-- Profile Image & Bio -->
