Added profile pic and bio to home page (optimised for mobile only)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
     </section>
 
     <!-- Profile Image & Bio -->
-    <section>
+    <section class="container-fluid g-0">
+        <div class="row bio-section-container">
+            <div class="col-12 col-lg-4">
+                <!-- Profile Image -->
+                <div class="bioimage"></div>
+            </div>
+            <div class="col-12 col-lg-8">
+                <!-- Bio -->
+                <div class="biotext">
+                    <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George; I live and travel
+                        full-time in my van, Simba, with my little rotti companion, Zayda. Originally from Dublin, we
+                        travel all over Ireland and Europe, surfing, hiking, and exploring. On this blog, I have
+                        detailed my entire conversion experience, do's and don'ts, what I would change, what I would
+                        keep, how to get a van on the road in Ireland (registration, tax, and insurance), and an inside
+                        look into full-time vanlife in Ireland. You can read more about our story here. I hope you
+                        enjoy, and should you have any questions, don't be afraid to get in touch!</p>
+                </div>
+            </div>
+
+        </div>
+
 
     </section>
 
