Optimised profile image and bio text across screen sizes

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     </section>
 
     <!-- Profile Image & Bio -->
-    <section class="container-fluid g-0">
-        <div class="row bio-section-container">
+    <section class="container-fluid">
+        <div class="row">
             <div class="col-12 col-lg-4">
                 <!-- Profile Image -->
                 <div class="bioimage"></div>
             </div>
-            <div class="col-12 col-lg-8">
+            <div class="col-12 col-lg-8 bio-text-section">
                 <!-- Bio -->
                 <div class="biotext">
                     <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George; I live and travel
@@ -82,15 +82,11 @@
                         enjoy, and should you have any questions, don't be afraid to get in touch!</p>
                 </div>
             </div>
-
         </div>
-
-
     </section>
 
     <!-- Featured & Recent Articles -->
     <section>
-
     </section>
 
     <footer>
