--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         travel all over Ireland and Europe, surfing, hiking, and exploring. On this blog, I have
                         detailed my entire conversion experience, do's and don'ts, what I would change, what I would
                         keep, how to get a van on the road in Ireland (registration, tax, and insurance), and an inside
-                        look into full-time vanlife in Ireland. You can read more about our story here. I hope you
+                        look into full-time vanlife in Ireland. You can read more about our story <a href="ourstory.html" class="bodylink">here</a>. I hope you
                         enjoy, and should you have any questions, don't be afraid to get in touch!</p>
                 </div>
             </div>
