Bootstrap cards added for featured and recent articles

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                         travel all over Ireland and Europe, surfing, hiking, and exploring. On this blog, I have
                         detailed my entire conversion experience, do's and don'ts, what I would change, what I would
                         keep, how to get a van on the road in Ireland (registration, tax, and insurance), and an inside
-                        look into full-time vanlife in Ireland. You can read more about our story <a href="ourstory.html" class="bodylink">here</a>. I hope you
+                        look into full-time vanlife in Ireland. You can read more about our story <a
+                            href="ourstory.html" class="bodylink">here</a>. I hope you
                         enjoy, and should you have any questions, don't be afraid to get in touch!</p>
                 </div>
             </div>
@@ -86,7 +87,45 @@
     </section>
 
     <!-- Featured & Recent Articles -->
-    <section>
+    <section class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="d-md-none d-lg-block col-lg-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
