added headers to cards

--- a/index.html
+++ b/index.html
@@ -87,10 +87,14 @@
     </section>
 
     <!-- Featured & Recent Articles -->
+    <!-- Cards sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/card/) -->
     <section class="container">
         <div class="row">
             <div class="col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem;">
+                    <div class="card-header">
+                        Featured
+                    </div>
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -103,6 +107,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem;">
+                    <div class="card-header">
+                        Recent | DIY Van Conversion
+                    </div>
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -115,6 +122,9 @@
             </div>
             <div class="d-md-none d-lg-block col-lg-4">
                 <div class="card" style="width: 18rem;">
+                    <div class="card-header">
+                        Recent | Vanlife in Ireland
+                    </div>
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -125,7 +135,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <footer>
