Styled featured and recent article cards, changed color palette.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <!-- Bio -->
                 <div class="biotext">
                     <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George; I live and travel
-                        full-time in my van, Simba, with my little rotti companion, Zayda. Originally from Dublin, we
+                        full-time in my van, 'Goats Cheese', with my little rotti companion, Zayda. Originally from
+                        Dublin, we
                         travel all over Ireland and Europe, surfing, hiking, and exploring. On this blog, I have
                         detailed my entire conversion experience, do's and don'ts, what I would change, what I would
                         keep, how to get a van on the road in Ireland (registration, tax, and insurance), and an inside
@@ -88,53 +89,52 @@
 
     <!-- Featured & Recent Articles -->
     <!-- Cards sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/card/) -->
-    <section class="container">
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
+    <section class="container-fluid">
+        <div class="row article-container">
+            <div class="col-md-6 col-lg-4 card-section">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
                         Featured
                     </div>
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/images/van-snow.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">5 Steps To Get Your Van Road Ready</h5>
+                        <p class="card-text">Getting a self converted van on the road in Ireland can be suprisingly
+                            tricky. Here I have a handy step by step guide on how to get your home on wheels registered,
+                            taxed, insured, and ready for the open road.</p>
+                        <a href="#" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4 card-section">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
                         Recent | DIY Van Conversion
                     </div>
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/images/van-sun.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Coming Soon</h5>
+                        <p class="card-text">Articles detailing my full van conversion are in the works, check back
+                            soon! You can subscribe below to get notified.</p>
+                        <a href="#" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
-            <div class="d-md-none d-lg-block col-lg-4">
+            <div class="d-md-none d-lg-block col-lg-4 card-section">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
                         Recent | Vanlife in Ireland
                     </div>
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/images/van-night.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Coming Soon</h5>
+                        <p class="card-text">I will have some great Vanlife content up soon, subscribe below to get
+                            notified!</p>
+                        <a href="#" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <footer>
