--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     </div>
                     <div class="d-md-none d-lg-block">
                         <ul class="nav-social">
-                            <li><i class="fab fa-instagram bold"></i></li>
-                            <li><i class="fab fa-tiktok"></i></li>
+                            <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
+                            <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
                         </ul>
                     </div>
 
@@ -137,7 +137,32 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="container-fluid">
+        <div class="row footer-section">
+            <div class="col">
+                <ul class="nav flex-column flex-md-row justify-content-center footer-nav">
+                    <li class="nav-item">
+                        <a class="nav-link link" href="ourstory.html">Our Story</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <span class="linebreak">&nbsp;</span>
+                <div>
+                    <ul class="social-footer">
+                        <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
+                        <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
     </footer>
 
