made featured and recent articles section responsive across screen sizes.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section class="container-fluid">
         <div class="row article-container">
             <div class="col-md-6 col-lg-4 card-section">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <div class="card-header">
                         Featured
                     </div>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 card-section">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <div class="card-header">
                         Recent | DIY Van Conversion
                     </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="d-md-none d-lg-block col-lg-4 card-section">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <div class="card-header">
                         Recent | Vanlife in Ireland
                     </div>
