--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Profile Image & Bio -->
     <section class="container-fluid">
-        <div class="row">
+        <div class="row biosection">
             <div class="col-12 col-lg-4">
                 <!-- Profile Image -->
                 <div class="bioimage"></div>
