updated hero image and text

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     <section class="container-fluid g-0">
         <div class="hero-image-home">
             <div class="hero-text">
-                <h1>"Your <s>feet</s> van will take you where your heart is."</h1>
-                <span class="linebreak">&nbsp;</span>
-                <h3><em>Irish Proverb</em></h3>
+                <h1 class="h1">"Your <s>feet</s> van will take you where your heart is."</h1>
             </div>
         </div>
     </section>
