adjusted margins for articles section 1024px +.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Featured & Recent Articles -->
     <!-- Cards sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/card/) -->
-    <section class="container-fluid">
+    <section class="container-fluid bg-article">
         <div class="row article-container">
             <div class="col-md-6 col-lg-4 card-section">
                 <div class="card" style="width: 100%;">
