adjusted font sizing across screen sizes, styled contact form.

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
     </section>
 
     <!-- Contact Form -->
-    
+
     <section class="container form">
         <form class="row g-3">
             <div class="col-12">
@@ -78,7 +78,7 @@
                 <textarea class="form-control" style="height: 100px"></textarea>
             </div>
             <div class="col-12 d-flex justify-content-center">
-                <button type="submit" class="btn btn-general">Sign in</button>
+                <button type="submit" class="btn btn-general">Send</button>
             </div>
         </form>
     </section>
