added sticky footer for contact and our story pages - 2560px +

--- a/ourstory.html
+++ b/ourstory.html
@@ -12,85 +12,96 @@
 </head>
 
 <body>
-    <header>
-        <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
-        <nav class="navbar navbar-expand-md bg-nav">
-            <div class="container-fluid">
-                <a class="navbar-brand logo" href="index.html">&nbsp;</a>
-                <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="toggle-icon"><i class="fas fa-bars"></i></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="navigation">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item">
-                                <a class="nav-link link" href="ourstory.html">Our Story</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="d-md-none d-lg-block">
-                        <ul class="nav-social">
-                            <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                            <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
-                        </ul>
-                    </div>
+    <div class="content-wrapper">
+        <header>
+            <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
+            <nav class="navbar navbar-expand-md bg-nav">
+                <div class="container-fluid">
+                    <a class="navbar-brand logo" href="index.html">&nbsp;</a>
+                    <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="toggle-icon"><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="navigation">
+                            <ul class="navbar-nav mx-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="ourstory.html">Our Story</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="d-md-none d-lg-block">
+                            <ul class="nav-social">
+                                <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
+                                <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                            </ul>
+                        </div>
 
 
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <!-- Banner Section -->
-    <!-- <section class="container-fluid g-0">
+        <!-- Banner Section -->
+        <!-- <section class="container-fluid g-0">
         <div class="banner-image-our-story"></div>
     </section> -->
 
-    <!-- Our Story Section -->
-    <section class="container-fluid">
-        <div class="row biosection">
-            <div class="col-12">
-                <!-- Profile Image -->
-                <div class="os-bioimage"></div>
-            </div>
-            <div class="col-12 bio-text-section">
-                <!-- Bio -->
-                <div class="ourstory-bio">
-                    <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George, I'm 25, and I live and
-                        travel full-time in my van, 'Goats Cheese', with my little rotti companion, Zayda. Originally
-                        from Dublin, we travel all over Ireland and soon Europe, surfing, hiking, and exploring.
-                        <br><br>
-                        So why, vanlife? Three reasons, to travel, to experience more of the outdoors, and to live with
-                        less. Striping your life back to what you can fit in a 3m x 2m space is challenging but so
-                        rewarding. It has forced me to shift my perspective on what's important and what I fundamentally
-                        need to be happy.
-                        <br><br>
-                        So why the blog? With the size of the vanlife community worldwide, there is no shortage of
-                        resources out there for people looking to take on their own conversions or to get a glimpse of
-                        what living and travelling full-time in a van is really like. When doing my own research, I
-                        found there to be far less information out there from an Irish perspective. Getting a van on the
-                        road in Ireland is surprisingly tricky. There are a lot of hoops to jump through when it comes
-                        to converting, registering, and insuring, so I decided to document my experience to help others
-                        who might be thinking of building a tiny home on wheels, for weekends away or for full-time
-                        living.
-                        <br><br>
-                        I hope you find the resources here helpful and if you have any questions, please feel free to
-                        get in touch either <a href="contact.html" class="bodylink">here</a> or on social media.</p>
+        <!-- Our Story Section -->
+        <section class="container-fluid">
+            <div class="row biosection">
+                <div class="col-12">
+                    <!-- Profile Image -->
+                    <div class="os-bioimage"></div>
+                </div>
+                <div class="col-12 bio-text-section">
+                    <!-- Bio -->
+                    <div class="ourstory-bio">
+                        <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George, I'm 25, and I live
+                            and
+                            travel full-time in my van, 'Goats Cheese', with my little rotti companion, Zayda.
+                            Originally
+                            from Dublin, we travel all over Ireland and soon Europe, surfing, hiking, and exploring.
+                            <br><br>
+                            So why, vanlife? Three reasons, to travel, to experience more of the outdoors, and to live
+                            with
+                            less. Striping your life back to what you can fit in a 3m x 2m space is challenging but so
+                            rewarding. It has forced me to shift my perspective on what's important and what I
+                            fundamentally
+                            need to be happy.
+                            <br><br>
+                            So why the blog? With the size of the vanlife community worldwide, there is no shortage of
+                            resources out there for people looking to take on their own conversions or to get a glimpse
+                            of
+                            what living and travelling full-time in a van is really like. When doing my own research, I
+                            found there to be far less information out there from an Irish perspective. Getting a van on
+                            the
+                            road in Ireland is surprisingly tricky. There are a lot of hoops to jump through when it
+                            comes
+                            to converting, registering, and insuring, so I decided to document my experience to help
+                            others
+                            who might be thinking of building a tiny home on wheels, for weekends away or for full-time
+                            living.
+                            <br><br>
+                            I hope you find the resources here helpful and if you have any questions, please feel free
+                            to
+                            get in touch either <a href="contact.html" class="bodylink">here</a> or on social media.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <footer class="container-fluid">
         <div class="row footer-section">
