--- a/contact.html
+++ b/contact.html
@@ -12,77 +12,78 @@
 </head>
 
 <body>
-    <header>
-        <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
-        <nav class="navbar navbar-expand-md bg-nav">
-            <div class="container-fluid">
-                <a class="navbar-brand logo" href="index.html">&nbsp;</a>
-                <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="toggle-icon"><i class="fas fa-bars"></i></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="navigation">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item">
-                                <a class="nav-link link" href="ourstory.html">Our Story</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="d-md-none d-lg-block">
-                        <ul class="nav-social">
-                            <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                            <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
-                        </ul>
-                    </div>
+    <div class="content-wrapper">
+        <header>
+            <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
+            <nav class="navbar navbar-expand-md bg-nav">
+                <div class="container-fluid">
+                    <a class="navbar-brand logo" href="index.html">&nbsp;</a>
+                    <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="toggle-icon"><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="navigation">
+                            <ul class="navbar-nav mx-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="ourstory.html">Our Story</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="d-md-none d-lg-block">
+                            <ul class="nav-social">
+                                <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
+                                <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                            </ul>
+                        </div>
 
 
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <!-- Banner Section -->
+        <section class="container-fluid g-0">
+            <div class="banner-image-contact">
+                <div class="banner-text">
+                    <h1 class="banner-heading h1 bg-heading">Get in touch</h1>
                 </div>
             </div>
-        </nav>
-    </header>
+        </section>
 
-    <!-- Banner Section -->
-    <section class="container-fluid g-0">
-        <div class="banner-image-contact">
-            <div class="banner-text">
-                <h1 class="banner-heading h1 bg-heading">Get in touch</h1>
-            </div>
-        </div>
-    </section>
+        <!-- Contact Form -->
 
-    <!-- Contact Form -->
-
-    <section class="container form">
-        <form class="row g-3">
-            <div class="col-12">
-                <label for="inputEmail4" class="form-label">Name:</label>
-                <input type="name" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-12">
-                <label for="inputPassword4" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress" class="form-label">Your message:</label>
-                <textarea class="form-control" style="height: 100px"></textarea>
-            </div>
-            <div class="col-12 d-flex justify-content-center">
-                <button type="submit" class="btn btn-general">Send</button>
-            </div>
-        </form>
-    </section>
-
+        <section class="container form">
+            <form class="row g-3">
+                <div class="col-12">
+                    <label for="inputEmail4" class="form-label">Name:</label>
+                    <input type="name" class="form-control" id="inputEmail4">
+                </div>
+                <div class="col-12">
+                    <label for="inputPassword4" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="inputPassword4">
+                </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Your message:</label>
+                    <textarea class="form-control" style="height: 100px"></textarea>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-general">Send</button>
+                </div>
+            </form>
+        </section>
+    </div>
 
     <footer class="container-fluid">
         <div class="row footer-section">
@@ -112,7 +113,6 @@
         </div>
 
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
