--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <section class="container-fluid g-0">
             <div class="banner-image-contact">
                 <div class="banner-text">
-                    <h1 class="banner-heading h1 bg-heading">Get in touch</h1>
+                    <h1 class="h1">Get in touch</h1>
                 </div>
             </div>
         </section>
