updated home page hero-image styling

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 
     <!-- Hero Section -->
     <section class="container-fluid g-0">
-        <div class="hero-image-home">
-            <div class="hero-text bg-heading">
+        <div class="opacity-container">
+            <div class="hero-image-home"></div>
+            <div class="hero-text">
                 <h1 class="h1">"Your <s>feet</s> van will take you where your heart is."</h1>
+                <h6 class="h6 bg-heading"><em>Irish Proverb</em></h6>
             </div>
         </div>
     </section>
