--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
         <div class="opacity-container">
             <div class="hero-image-home"></div>
             <div class="hero-text">
-                <h1 class="h1">"Your <s>feet</s> van will take you where your heart is."</h1>
-                <h6 class="h6 bg-heading"><em>Irish Proverb</em></h6>
+                <h1 class="hero-heading">An Irish Vanlife Story</h1>
             </div>
         </div>
     </section>
 
     <!-- Profile Image & Bio -->
-    <section class="container-fluid">
+    <section class="container">
         <div class="row biosection">
             <div class="col-12 col-lg-4">
                 <!-- Profile Image -->
