corrected home page section widths, changed card layout for tablet.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <!-- Profile Image & Bio -->
-    <section class="container">
+    <section class="container-fluid d-flex justify-content-center">
         <div class="row biosection">
             <div class="col-12 col-lg-4">
                 <!-- Profile Image -->
@@ -88,9 +88,9 @@
 
     <!-- Featured & Recent Articles -->
     <!-- Cards sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/card/) -->
-    <section class="container-fluid bg-article">
+    <section class="container-fluid bg-article d-flex justify-content-center">
         <div class="row article-container">
-            <div class="col-md-6 col-lg-4 card-section">
+            <div class="col-md-12 col-lg-4 card-section">
                 <div class="card" style="width: 100%;">
                     <div class="card-header">
                         Featured
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-md-none d-lg-block col-lg-4 card-section">
+            <div class="col-md-6 col-lg-4 card-section">
                 <div class="card" style="width: 100%;">
                     <div class="card-header">
                         Recent | Vanlife in Ireland
