--- a/ourstory.html
+++ b/ourstory.html
@@ -59,7 +59,7 @@
     </section> -->
 
         <!-- Our Story Section -->
-        <section class="container-fluid">
+        <section class="container-fluid d-flex justify-content-center">
             <div class="row biosection">
                 <div class="col-12">
                     <!-- Profile Image -->
