--- a/vanlifeireland.html
+++ b/vanlifeireland.html
@@ -53,9 +53,9 @@
 
         <!-- Banner Section -->
         <section class="container-fluid g-0">
-            <div class="banner-image-camper-conversion">
+            <div class="banner-image-vanlife-ireland">
                 <div class="banner-text">
-                    <h1 class="h1">DIY Camper Conversion</h1>
+                    <h1 class="h1">Vanlife in Ireland</h1>
                 </div>
             </div>
         </section>
@@ -66,8 +66,7 @@
                 <div class="col-12">
                     <h1 class="coming-soon-heading">Coming Soon</h1>
                     <p class="coming-soon-text">Thanks for showing interest in what my blog has to offer. I am currently
-                        working
-                        on a detailed overview of my van conversion, check back soon!</p>
+                        working on some great articles all about full-time vanlife in Ireland. Check back soon!</p>
                 </div>
             </div>
         </section>
@@ -99,7 +98,6 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
