added email subscription section (home page), cards: links and alt tags, body link hover, corrected btn margin

--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
                     <div class="card-header">
                         Featured
                     </div>
-                    <img src="assets/images/van-snow.jpg" class="card-img-top" alt="...">
+                    <img src="assets/images/van-snow.jpg" class="card-img-top"
+                        alt="Van parked in a snow covered forest car park in Enniskerry, Co. Dublin">
                     <div class="card-body">
                         <h5 class="card-title">5 Steps To Get Your Van Road Ready</h5>
                         <p class="card-text">Getting a self converted van on the road in Ireland can be suprisingly
                             tricky. Here I have a handy step by step guide on how to get your home on wheels registered,
                             taxed, insured, and ready for the open road.</p>
-                        <a href="#" class="btn btn-general">Check it out</a>
+                        <a href="diycamperconversion.html" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
@@ -110,12 +111,13 @@
                     <div class="card-header">
                         Recent | DIY Van Conversion
                     </div>
-                    <img src="assets/images/van-sun.jpg" class="card-img-top" alt="...">
+                    <img src="assets/images/van-sun.jpg" class="card-img-top"
+                        alt="Van parked in the Wicklow mountains as sun rises">
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
                         <p class="card-text">Articles detailing my full van conversion are in the works, check back
                             soon! You can subscribe below to get notified.</p>
-                        <a href="#" class="btn btn-general">Check it out</a>
+                        <a href="diycamperconversion.html" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
@@ -124,14 +126,28 @@
                     <div class="card-header">
                         Recent | Vanlife in Ireland
                     </div>
-                    <img src="assets/images/van-night.jpg" class="card-img-top" alt="...">
+                    <img src="assets/images/van-night.jpg" class="card-img-top"
+                        alt="Van parked at night at Fanore beach in county Clare">
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
                         <p class="card-text">I will have some great Vanlife content up soon, subscribe below to get
                             notified!</p>
-                        <a href="#" class="btn btn-general">Check it out</a>
+                        <a href="vanlifeireland.html" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Email Sub Section -->
+    <section class="container-fluid d-flex justify-content-center">
+        <div class="row emailsub-container">
+            <h2 class="col-12 emailsub-header">Subscribe for updates!</h2>
+            <div class="col-12 emailsub-input">
+                <input type="email" class="form-control" placeholder="Email Address">
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+                <button type="submit" name="submit" class="btn btn-general">Subscribe</button>
             </div>
         </div>
     </section>
