--- a/contact.html
+++ b/contact.html
@@ -65,22 +65,32 @@
         <!-- Contact Form -->
 
         <section class="container form">
-            <form class="row g-3">
-                <div class="col-12">
+            <!-- How to send form to email sourced from https://blog.hubspot.com/marketing/html-form-email -->
+            <form method="POST" name="contact-form" action="https://www.formbackend.com/f/e053dfad74a9826e" class="needs-validation" novalidate>
+                <div class="col-12 mb-3">
                     <label for="name" class="form-label">Name*</label>
-                    <input type="name" class="form-control" id="name" required>
+                    <input type="name" class="form-control" id="name" name="sender" required>
+                    <div class="invalid-feedback">
+                        Please include your name.
+                    </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 mb-3">
                     <label for="email" class="form-label">Email*</label>
-                    <input type="email" class="form-control" id="email" required>
+                    <input type="email" class="form-control" id="email" name="senderEmail" required>
+                    <div class="invalid-feedback">
+                        Please include your email.
+                    </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 mb-3">
                     <label for="message" class="form-label">Your message*</label>
-                    <textarea class="form-control" id="message" style="height: 100px" required></textarea>
+                    <textarea class="form-control" id="message" style="height: 100px" name="message" required></textarea>
+                    <div class="invalid-feedback">
+                        Please include a short message.
+                    </div>
                 </div>
-                <div class="input-group">
+                <div class="input-group mb-5">
                     <span class="input-group-text" id="basic-addon1">@</span>
-                    <input type="text" class="form-control" id="social" placeholder="Social Media" aria-label="Username"
+                    <input type="text" class="form-control" id="social" placeholder="Social Media" name="social" aria-label="Username"
                         aria-describedby="basic-addon1">
                 </div>
                 <div class="col-12 d-flex justify-content-center">
@@ -118,9 +128,29 @@
         </div>
 
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
+
+    <script>
+        // Form Validation sourced: https://getbootstrap.com/docs/5.0/forms/validation/
+        (function () {
+            'use strict'
+            var forms = document.querySelectorAll('.needs-validation')
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+    </script>
+
 
 </body>
 
